# discotool

./: .gitignore  pyproject.toml
devlog/: 2025-07-27.md
discotool/mcp/: README.md  server.py  tools.py
tests/: test_mcp_server.py
