[project]
name = "discotool"
version = "0.5.7"
description = "Module and tool to discover all boards connected to USB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=7.1.2",
    "click-aliases==1.0.1",
    "psutil>=5.8.0",
    "pyserial>=3.4",
    "pywin32; sys_platform == 'win32'",
    "wmi>=1.5.1; sys_platform == 'win32'",
    "pyudev; sys_platform == 'linux'",
    "mcp>=1.12.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pip>=25.1.1",
    "pytest>=8.4.1",
]

[tool.uv]
project-environment = ".wsl"
